# DEL-Analysis

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: delanalysis.py
src/dnaenclib/: analysis.py
tests/: test.py
