[metadata]
name = delanalysis
version = 0.1.0
author = Rory Coffey
author_email = coffeyrt@gmail.com
description = An analysis algoritm that is a companion to DEL-Decode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Roco-scientist/DEL-Analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
py_modules= delanalysis 
python_requires = >=3.6

[options.packages.find]
where = src
